# aibaton

./: AGENTS.md  README.md  README_cn.md  pyproject.toml  setup.cfg
aibaton/: logger.py  process.py  progress.py  runner.py  session.py
aibaton/providers/: claude.py
aibaton/tests/: test_events.py  test_select.py
doc/: contribute.md  plan.md
examples_cn/: demo.py  process_files.py  work_flow.py  work_flow_prompt.md
examples_en/: demo.py  process_files.py  work_flow.py  work_flow_prompt.md
skill/: SKILL.md  requirements.txt
